--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "mocha"
   },
   "engines": {
     "node": "16"
@@ -19,15 +20,22 @@
     "firebase-functions": "^4.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.15",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "chai": "^4.3.7",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.0"
+    "sinon": "^15.0.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
