--- a/functions/package.json
+++ b/functions/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "firebase-functions-test": "^3.1.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "sinon": "^15.0.4",
