--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.5",
     "canvas-confetti": "^1.6.0",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-countup": "^13.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
