--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "run-pwa": "ng build && http-server -p 8080 -c-1 dist/bogglenc",
     "test": "ng test"
   },
   "private": true,
@@ -24,7 +25,6 @@
     "bootstrap-icons": "^1.10.5",
     "canvas-confetti": "^1.6.0",
     "ngx-bootstrap": "^10.2.0",
-    "ngx-countup": "^13.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
