--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
@@ -24,6 +25,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "canvas-confetti": "^1.6.0",
+    "firebase": "^9.23.0",
+    "firebaseui": "^6.0.2",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
